--- a/openApiDocs/v1.0/Bookings.yml
+++ b/openApiDocs/v1.0/Bookings.yml
@@ -4826,6 +4826,19 @@ components:
               type: string
               description: The URL of the meeting to join anonymously.
               nullable: true
+            customerEmailAddress:
+              type: string
+              nullable: true
+            customerName:
+              type: string
+              nullable: true
+            customerNotes:
+              type: string
+              description: Notes from the customer associated with this appointment.
+              nullable: true
+            customerPhone:
+              type: string
+              nullable: true
             customers:
               type: array
               items:
